# atom_node

./: Cargo.toml
frontend/: app.ts  index.html  styles.css
migrations/: 001_initial.sql  002_python_env.sql
scripts/: package_bundle.sh
src/: error.rs  main.rs  paths.rs  windows_tray.rs
src/api/: routes.rs
src/api/dto/: execution.rs  plugin.rs
src/api/handlers/: execution.rs  plugin.rs  update.rs
src/config/: mod.rs
src/executor/: python_executor.rs
src/models/: execution.rs  mod.rs  plugin.rs
src/repository/: connection.rs  execution_repository.rs  plugin_repository.rs
src/services/: execution_service.rs  plugin_service.rs  update_service.rs
