[package]
name = "atom_node"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "atom_node"
path = "src/main.rs"
windows_subsystem = "windows"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.16"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zip = "2.2"
semver = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.21.3"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
